# music163bot-rust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.3.md  config.ini.example
.github/workflows/: build.yml
src/: audio_buffer.rs  bot.rs  config.rs  database.rs  main.rs  memory.rs  music_api.rs  utils.rs
