[package]
name = "music163bot-rust"
version = "1.1.9"
edition = "2024"
license = "WTFPL"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Telegram bot framework
teloxide = { version = "0.17", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "stream", "rustls-tls"] }

# URL parsing
url = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }


# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
regex = "1.0"
md5 = "0.8"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.0"

# Crypto for eapi search
cipher = "0.4"
aes = "0.8"
ecb = "0.1"
hex = "0.4"

# Config
config = { version = "0.15", default-features = false, features = ["ini"] }
clap = { version = "4.0", features = ["derive"] }

# File operations
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# Audio metadata
id3 = "1.0"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# FLAC 元数据（写入封面）
metaflac = "0.2"

# System info (for memory detection in smart storage)
sysinfo = "0.38"

# Memory allocator with better memory return behavior
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["profiling", "stats"] }
tikv-jemalloc-sys = { version = "0.6" }

[profile.release]
# 优化级别: z=最小体积, s=平衡
opt-level = "z"

# 链接时优化
lto = true

# 单一代码生成单元（更好优化但编译更慢）
codegen-units = 1

# 移除 panic 展开代码
panic = "abort"

# 启用 strip 移除符号表
strip = true

# 禁用增量编译（对于 release 构建更好优化）
incremental = false
